--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: YMMV
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Your mileage may vary. Runners share their experiences with running injuries.
-baseurl: "https://bizacat.github.io/ymmv/" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://bizacat.github.io/ymmv/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 gems:
@@ -23,12 +23,14 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       layout: post
+  -
+    scope:
+      path: "experiences"
+    values:
+      layout: experience
 collections:
   experiences:
     output: true
-    defaults:
-      values:
-        layout: experience
   categories:
     output: true
 
